# mwe

./: .gitignore  LICENSE  README.md  git.md  uv.md
.github/workflows/: pylint.yml  release.yml  test.yml
maturin/: README.md
maturin/guessing-game/: Cargo.toml  pyproject.toml
maturin/guessing-game/src/: lib.rs
python/: README.md
python/cicd_release/: README.md  pyproject.toml
python/cicd_release/.github/workflows/: release.yml  test.yml
python/cicd_release/cicd_example/: command_line.py
python/cicd_release/tests/: test_command_line.py
python/command_line/: MANIFEST.in  README.md  pyproject.toml
python/command_line/mypackage/: __init__.py  command_line.py
python/command_line/mypackage/tests/: test_command_line.py
python/coverage_combo/: notes.txt
python/coverage_combo/source_1/: test_hello.py
python/coverage_combo/source_2/: .coveragerc  test_hello.py
python/coverage_combo/source_3/: test_hello.py
python/pattern/: pattern.py
python/schema/: README.md  test.py
python/virtual_env/: README.md
python/yml_to_dict/: example.yml  run.py
