# reference
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# PEP621
# https://peps.python.org/pep-0621/
#
# Python Packages
# https://py-pkgs.org/welcome

# Use automatic discovery from setuptools
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#src-layout

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.0.1"
authors = [
  { name="Emily Hunt", email="ehunt@gmail.com" },
  { name="Jason Doe", email="jason.doe@microsoft.com" },
]
description = "some description here"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.12"',
    "black",
    "flake8",
    "pytest",
    "pytest-cov"
]
# dependencies = [
#     "black==22.6.0", "flake8", "matplotlib", "numpy", "pytest", "pytest-cov", "pyyaml", "scipy", "sympy" 
# ]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

# Entry Points
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
hello="mypackage.command_line:hello"
mypackage="mypackage.command_line:mymodule"
# version="mypackage.command_line:module_version"

[project.urls]
"Homepage" = "https://some-url"
"Bug Tracker" = "https://some-url/issues"
